apps/base/traefik/03-hive.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hive
  labels:
    app: hive

spec: 
  replicas: 1
  selector:
    matchLabels:
      app: hive
  template:
    metadata:
      labels:
        app: hive
    spec:
      containers:
        - name: hive
          image: ghcr.io/abecker7/hivebox/abecker7/hive-docker:0.2.6
          ports:
            - name: http
              containerPort: 5050
