apps/base/traefik/02-traefik-services.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service


spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service

spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-hive-service

spec:
  type: LoadBalancer
  ports:
    - targetPort: hive
      port: 5050
  selector:
    app: traefik 
---
apiVersion: v1
kind: Service
metadata: 
  name: traefik-pod-service
  
spec:
  ports:
    - targetPort: pod
      port: 9898
  selector:
    app: traefik
