apps/base/traefik/03-hive-services.yml
apiVersion: v1
kind: Service
metadata:
  name: hive

spec:
  ports:
    - name: hive
      port: 5050 
      targetPort: hive

  selector:
    app: hive
