apps/base/traefik/04-hive-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hive-ingress
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hive
              port:
                name: hive
